# Surskit

./: CMakeLists.txt  main.cc  readme.md
benchmark/: mold-state.cc
include/: readme.md
include/algorithm/solver/: alpha-beta-dev.h  alpha-beta-force.h  full-traversal.h
include/algorithm/tree-bandit/bandit/: exp3.h  matrix-ucb.h
include/algorithm/tree-bandit/tree/: multithreaded.h  tree-bandit-root-matrix.h  tree-bandit.h
include/libpinyon/: dynamic-wrappers.h
include/model/: monte-carlo-model.h  solved-model.h
include/tree/: node.h  tree-debug.h  tree-flat.h  tree-obs.h  tree.h
include/types/: matrix.h  mutex.h  random.h  rational.h  types.h  value.h  vector.h
src/: pinyon.h  pinyon.hh  re.cc
src/algorithm/: algorithm.h
src/algorithm/solver/: alpha-beta-force.hh  alpha-beta-old.h  alpha-beta.h
src/algorithm/tree-bandit/bandit/: exp3-fat.h  exp3.h  rand.h  ucb.h
src/algorithm/tree-bandit/tree/: off-policy.h  tree-bandit-root-matrix.h  tree-bandit.h
src/libpinyon/: grow-lib.h  lrslib.h  math.h  packs.h  search-type.h
src/model/: model.h  monte-carlo-model.h  search-model.h
src/state/: mapped-state.h  model-bandit.h  random-tree.h  state.h  test-states.h  traversed.h
src/tree/: tree.h
src/types/: matrix.h
tests/: flat.cc
tests/cart/: node.cc
tests/dynamic/: arena.cc  w.cc
tests/gmp/: mpq.cc
tests/solving/: ab-iter.cc  ab-refactor.cc  ab.cc  random-tree-expl.cc
